--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Valeries's birthday 🎉</h1>
+            <h1>Valeries's birthday is next month! 🎉</h1>
             <img id="bff-img" src="images/3288d3cb-6184-420c-a58c-7a23f53edc0e.jpg">
             <h2 id="bday-age">23 years old</h2>
             <h4 id="bday-date">04.10.2024</h4>
         </div>
         
         <div class="gift-section">
-            <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
+            <h2 class="gift-title">Here's how happy I am for you 🥳</h2>
             <h3 class="gift-hint">(Hover over the gift)</h3>
             <div class="gift-img" id="gift-img-happy"></div>
         </div>
